[package]
name = "ostrich-core"
version = "0.1.0"
authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"
description = "Main utils for the ostrich project"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
